--- a/Javascript/DOM/index.html
+++ b/Javascript/DOM/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="firstDiv">
+    <!-- <div id="firstDiv">
         <h1>Hello World </h1>
         <p> Hi</p>
         <div style="display: none;"> Bye</div>
@@ -22,7 +22,31 @@
     <h4> Topic 1: Introduction</h4>
     <p id="myPara"> Something in this paragraph</p>
     <p> Learning DOM</p>
-    <button id="myBtn"> Click me</button>
+    <button id="myBtn"> Click me</button> -->
+
+    <!-- <h1 style="visibility: hidden;"> Heading 1234</h1>
+    <div>
+        <h3> <i> Fruits</i></h3>
+        <ul>
+            <li> Mango </li>
+            <li> Apple</li>
+            <li> Orange</li>
+        </ul>
+    </div> -->
+
+    <!-- <h2> Hello Javascript</h2>
+    <div class="box"> first div </div>
+    <div class="box"> second div </div>
+    <div class="box"> third div </div> -->
+
+    <!-- <div id="box" style="background-color: blueviolet; font-size: 12px;" name="JSDiv"> This is a simple div
+        <ul> List
+            <li> item1</li>
+            <li> item2</li>
+            <li> item3</li>
+        </ul>
+    </div> -->
+    <p class="para"> This is a para </p>
     <script src="script.js"></script>
 </body>
 </html>
